--- a/principal.html
+++ b/principal.html
@@ -110,7 +110,7 @@
         <div class="heart"></div>
         <footer>
             <div class="boton">
-                <button><a href='index.html'><span>Has click aquí</span></a></button>
+                <button><a href='/FLOR/index.html'><span>Has click aquí</span></a></button>
             </div>
         </footer>
     </div>
